Extract constant, added some logic when saving the todoItem