@@ -9,11 +9,11 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TodoItemServiceImpl implements TodoItemService {
 
+    public static final String TODO_ITEM_NOT_FOUND_WITH_ID = "TodoItem not found with id: ";
     private final TodoRepository todoRepository;
     private final ModelMapper modelMapper;
 
@@ -25,6 +25,9 @@ public class TodoItemServiceImpl implements TodoItemService {
     @Override
     public TodoItemResponseDTO createTodoItem(TodoItemRequestDTO todoItemRequestDTO) {
         TodoItem todoItem = modelMapper.map(todoItemRequestDTO, TodoItem.class);
+        if (todoItem.getDescription() == null) {
+            throw new IllegalArgumentException("Title are required fields");
+        }
         TodoItem savedTodoItem = todoRepository.save(todoItem);
         return modelMapper.map(savedTodoItem, TodoItemResponseDTO.class);
     }
@@ -33,21 +36,22 @@ public class TodoItemServiceImpl implements TodoItemService {
     public TodoItemResponseDTO getTodoItemById(Long id) {
         TodoItem todoItem = todoRepository
                 .findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("TodoItem not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(TODO_ITEM_NOT_FOUND_WITH_ID + id));
         return modelMapper.map(todoItem, TodoItemResponseDTO.class);
     }
 
     @Override
     public List<TodoItemResponseDTO> getAllTodoItems() {
-        return todoRepository.findAll().stream()
+        return todoRepository.findAll()
+                .stream()
                 .map(todoItem -> modelMapper.map(todoItem, TodoItemResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public TodoItemResponseDTO updateTodoItem(Long id, TodoItemRequestDTO todoItemRequestDTO) {
         TodoItem existingTodoItem = todoRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("TodoItem not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(TODO_ITEM_NOT_FOUND_WITH_ID + id));
 
         // Update fields
         modelMapper.map(todoItemRequestDTO, existingTodoItem);
@@ -59,8 +63,8 @@ public class TodoItemServiceImpl implements TodoItemService {
 
     @Override
     public void deleteTodoItem(Long id) {
-        if(!todoRepository.existsById(id)) {
-            throw new ResourceNotFoundException("TodoItem not found with id: " + id);
+        if (!todoRepository.existsById(id)) {
+            throw new ResourceNotFoundException(TODO_ITEM_NOT_FOUND_WITH_ID + id);
         }
         todoRepository.deleteById(id);
     }
